--- a/styles/global.sass
+++ b/styles/global.sass
@@ -1,17 +1,30 @@
+@import 'theme'
+  
 html
   min-height: calc(100% + env(safe-area-inset-top))
+  height: 100%
   padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left)
-
-html
-  padding: 0
-  margin: 0
   font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Helvetica, Verdana, Arial, sans-serif
   font-size: 16px
   font-weight: normal
   scroll-behavior: smooth
   -webkit-font-smoothing: antialiased
+  background: white
+  color: black
 
 *
   padding: 0
   margin: 0
   box-sizing: border-box
+
+button
+  border: 0
+  outline: 0
+
+.theme--dark
+  background: map-get($palette, 'dark', 'background', 'default')
+  color: map-get($palette, 'dark', 'text', 'default')
+
+.theme--light
+  background: map-get($palette, 'light', 'background', 'default')
+  color: map-get($palette, 'light', 'text', 'default')
