--- a/styles/main/Display.module.sass
+++ b/styles/main/Display.module.sass
@@ -1,5 +1,6 @@
 @use 'sass:math'
 @import '../theme'
+@import '../animations'
 
 .root
   flex: 1
@@ -24,10 +25,9 @@
       text-transform: uppercase
       font-size: 1.5rem
       font-weight: map-get($typography, 'fontWeight', bold)
-      @include themed()
-        background-color: transparentize(palette('background.default'), 1)
-        border: 2px solid palette('background.paper2')
-        color: palette('text.primary')
+      background-color: #7f7f7f00 // TRANS 1
+      border: 2px solid palette(background, paper2)
+      color: palette(text, primary)
       transition: background-color 200ms ease-in-out
 
       &.absent, &.present, &.correct
@@ -39,41 +39,14 @@
         &.present:nth-child(#{$i}), 
         &.correct:nth-child(#{$i})
           animation-delay: $flip-duration * $i
-          transition-delay: ($flip-duration * $i) + math.div($flip-duration, 2)
 
-      &.absent
-        @include themed()
-          border: 2px solid palette('background.paper2')
-          background-color: palette('background.paper2')
-
-      &.present
-        @include themed()
-          border: 2px solid palette('warning.main')
-          background-color: palette('warning.main')
-
-      &.correct
-        @include themed()
-          border: 2px solid palette('success.main')
-          background-color: palette('success.main')
+      @each $state in $flip-states
+        &.#{$state}
+          animation: flip-#{$state} $flip-duration ease-in-out forwards
 
       &.error
-        @include themed()
-          
-          background-color: transparentize(palette('error.main'), 0.8)
+        background-color: palette(tile, error) // TRANS .5
 
       &.entered
-        animation: scale 100ms ease-in-out forwards
-        @include themed()
-          border: 2px solid palette('background.paper')
-
-@keyframes scale
-  50%
-    transform: scale(1.1)
-  100%
-    transform: none
-
-@keyframes flip
-  50%
-    transform: rotateX(90deg)
-  100%
-    transform: none
+        animation: tile-fill 100ms ease-in-out forwards
+        border: 2px solid palette(background, paper)
