--- a/styles/common/Dialog.module.sass
+++ b/styles/common/Dialog.module.sass
@@ -25,7 +25,7 @@
   max-height: 100vh
   max-height: var(--app-height, 100vh)
   min-height: 50px
-  animation: slide-up 500ms ease-in-out forwards
+  animation: slide-up $slide-in-duration ease-in-out forwards
   background-color: palette(background, default)
   color: palette(text, primary)
 
