Tuned theme's palette

--- a/styles/common/Dialog.module.sass
+++ b/styles/common/Dialog.module.sass
@@ -26,7 +26,7 @@
   max-height: var(--app-height, 100vh)
   min-height: 50px
   animation: slide-up $slide-in-duration ease-in-out forwards
-  background-color: palette(background, default)
+  background-color: palette(misc, background)
   color: palette(text, primary)
 
 .close
