--- a/styles/global.sass
+++ b/styles/global.sass
@@ -46,6 +46,6 @@ button
 // Base background & color
 
 #themed-app
-  background: palette(background, default)
+  background: palette(misc, background)
   color: palette(text, primary)
 
