--- a/styles/main/Display.module.sass
+++ b/styles/main/Display.module.sass
@@ -24,7 +24,7 @@
       text-transform: uppercase
       font-size: 1.5rem
       font-weight: map-get($typography, 'fontWeight', bold)
-      border: 2px solid palette(background, paper2)
+      border: 2px solid palette(tile, border)
       color: palette(text, primary)
       transition: background-color 200ms ease-in-out
 
