--- a/styles/main/Header.module.sass
+++ b/styles/main/Header.module.sass
@@ -17,7 +17,7 @@
       margin: spacing(1)
       cursor: pointer
       transition: color 100ms ease-in-out
-      color: palette(background, paper)
+      color: palette(tile, default)
 
       &:hover
         color: palette(text, primary)
