--- a/styles/main/Snackbar.module.sass
+++ b/styles/main/Snackbar.module.sass
@@ -24,4 +24,4 @@
   &.success
     opacity: 1
     color: palette(text, primary)
-    background-color: palette(background, paper) // TRANS .5
+    background-color: palette(tile, default) // TRANS .5
