--- a/styles/animations.sass
+++ b/styles/animations.sass
@@ -3,7 +3,7 @@
 @each $state in $flip-states
   @keyframes #{$state}
     from
-      border: 2px solid palette(background, paper2)
+      border: 2px solid palette(tile, border)
       background-color: none
     to
       border: 2px solid palette(tile, #{$state})
@@ -14,7 +14,7 @@
     border: 2px solid palette(tile, correct)
     background-color: palette(tile, correct)
   to
-    border: 2px solid palette(background, paper2)
+    border: 2px solid palette(tile, border)
     background-color: none
   
 // Flips
@@ -38,7 +38,7 @@
     transform: scale(1.1)
   100%
     transform: none
-    border: 2px solid palette(background, paper)
+    border: 2px solid palette(tile, entered)
 
 // Keyboard Change
 
