--- a/styles/dialog/HelpDialog.module.sass
+++ b/styles/dialog/HelpDialog.module.sass
@@ -30,7 +30,7 @@
       font-size: 1.25rem
       font-weight: map-get($typography, 'fontWeight', bold)
       background-color: #7f7f7f00 // TRANS 1
-      border: 2px solid palette(background, paper2)
+      border: 2px solid palette(tile, border)
       color: palette(text, primary)
 
       @each $state in $flip-states
