--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -32,9 +32,12 @@ $typography: (
 
 $dark-colors: (
   tile: (
+    default: #818384,
+    border:  #3a3a3c,
+    entered: #565758,
     absent:  #3a3a3c,
-    present: #ffa726,
-    correct: #66bb6a,
+    present: #c9b458,
+    correct: #6aaa64,
     error:   #f443367f,
   ),
   text: (
@@ -42,21 +45,20 @@ $dark-colors: (
     faded:     rgba(#ffffff, 0.75),
     secondary: #82868c,
   ),
-  background: (
-    default: #121213,
-    paper:   #818384,
-    paper2:  #3a3a3c,
-  ),
   misc: (
+    background: #121213,
     divider: rgba(255, 255, 255, .12),
   ),
 );
 
 $light-colors: (
   tile: (
-    absent:  #dfe1e6,
-    present: #ffa726,
-    correct: #66bb6a,
+    default: #d3d6da,
+    border:  #d3d6da,
+    entered: #aaadaf,
+    absent:  #aaadaf,
+    present: #c9b458,
+    correct: #6aaa64,
     error:   #f443367f,
   ),
   text: (
@@ -64,12 +66,8 @@ $light-colors: (
     faded:     rgba(#181818, 0.75),
     secondary: #82868c,
   ),
-  background: (
-    default: #f5f4f3,
-    paper:   #787c7e,
-    paper2:  #d3d6da,
-  ),
   misc: (
+    background: #f5f4f3,
     divider: rgba(255, 255, 255, .12),
   ),
 );
