--- a/styles/dialog/StatisticsDialog.module.sass
+++ b/styles/dialog/StatisticsDialog.module.sass
@@ -51,6 +51,45 @@
       z-index: 1
       padding: spacing(0, 1)
 
+.emptyDistribution
+  text-align: center
+  padding: spacing(2)
+
+.footer
+  display: flex
+
+  > *
+    flex: 1
+
+  .countdown
+    text-align: center
+    border-right: 1px solid palette(misc, divider)
+
+    time
+      font-size: 2rem
+    
+    div
+      font-size: 0.8rem
+      color: palette(text, secondary)
+
+  .shareDiv
+    display: flex
+    justify-content: center
+    align-items: center
+
+    .share
+      display: flex
+      justify-content: center
+      align-items: center
+      padding: spacing(2, 3)
+      border-radius: $border-radius
+      background: palette(tile, correct)
+      font-size: 1rem
+      color: palette(text, primary)
+      cursor: pointer
+
+      > span
+        padding-left: spacing(1)
 
 @keyframes stat-bar
   from
