--- a/styles/dialog/StatisticsDialog.module.sass
+++ b/styles/dialog/StatisticsDialog.module.sass
@@ -85,6 +85,7 @@
       border-radius: $border-radius
       background: palette(tile, correct)
       font-size: 1rem
+      font-weight: map-get($typography, fontWeight, bold)
       color: palette(text, primary)
       cursor: pointer
 
