Cleaned up keyboard layout

--- a/styles/main/Keyboard.module.sass
+++ b/styles/main/Keyboard.module.sass
@@ -36,3 +36,7 @@
       &.#{$state}
         animation: keyboard-#{$state} $flip-duration-halved steps(1) forwards
         animation-delay: $flip-duration * 6.5
+
+  .spacer
+    border-radius: $border-radius
+    background: palette(tile, absent)
