--- a/styles/animations.sass
+++ b/styles/animations.sass
@@ -49,6 +49,8 @@
     to
       background-color: palette(tile, #{$state})
 
+// Dialog
+
 @keyframes slide-up
   0%
     opacity: 0
@@ -56,3 +58,9 @@
   100%
     opacity: 1
     transform: translateY(0px)
+
+// Share Button
+
+@keyframes shared
+  100%
+    content: "　已複製！　"
