--- a/styles/dialog/HelpDialog.module.sass
+++ b/styles/dialog/HelpDialog.module.sass
@@ -4,6 +4,9 @@
 .info p
   margin-bottom: spacing(4)
 
+  .highlight
+    color: palette(tile, correct)
+
 .tiles
   display: flex
   gap: spacing(1)
