Increased Snackbar's display priority

--- a/styles/main/Snackbar.module.sass
+++ b/styles/main/Snackbar.module.sass
@@ -15,11 +15,12 @@
   color: palette(text, primary)
   transition: opacity 200ms ease-in-out
   opacity: 0
+  z-index: 1500
 
   &.error
     opacity: 1
     color: palette(text, primary)
-    background-color: palette(tile, error) // TRANS .5
+    background-color: palette(tile, present) // TRANS .5
       
   &.success
     opacity: 1
