--- a/styles/main/Header.module.sass
+++ b/styles/main/Header.module.sass
@@ -22,19 +22,12 @@
       &:hover
         color: palette(text, primary)
 
-
-  .title
+  .logoDiv
     flex: 1
     display: flex
     align-items: center
     justify-content: center
-    text-align: center
-    font-size: 1.5rem
-    font-weight: map-get($typography, fontWeight, heavy)
-    letter-spacing: spacing(.5)
-    text-transform: uppercase
 
-    .subtitle
-      font-size: 0.7rem
-
-
+    .logo
+      flex: 1
+      color: palette(text, primary)
