--- a/styles/common/Dialog.module.sass
+++ b/styles/common/Dialog.module.sass
@@ -8,7 +8,7 @@
   right: 0
   bottom: 0
   z-index: map-get($z-index, dialog)
-  translate: tranlateZ(map-get($z-index, dialog))
+  transform: translateZ(map-get($z-index, dialog))
   background-color: rgba(0, 0, 0, .6)
 
 .inner
@@ -19,7 +19,6 @@
   
 .root 
   width: clamp(300px, 400px, 95%)
-  transform: translateZ(map-get($z-index, dialog-root))
   border-radius: $border-radius
   border: 0
   padding: 0
