Added answers and removed duplicate entries in dictionary

--- a/styles/main/Snackbar.module.sass
+++ b/styles/main/Snackbar.module.sass
@@ -6,8 +6,8 @@
   left: 50%
   transform: translateX(-50%) translateZ(map-get($z-index, snackbar))
   padding: spacing(3, 5)
-  width: 200px
-  height: 50px
+  width: 220px
+  min-height: 50px
   display: flex
   justify-content: center
   align-items: center
