--- a/styles/dialog/InfoDialog.module.sass
+++ b/styles/dialog/InfoDialog.module.sass
@@ -1,14 +1,18 @@
 @import '../theme'
+@import '../animations'
 
 .title
   text-align: center
   font-weight: map-get($typography, fontWeight, bold)
   font-size: 1.1rem
 
+.section
+  margin: spacing(4, 8)
+
 .table
   display: flex
   justify-content: space-between
-  padding: spacing(4)
+  margin-top: spacing(4)
 
   .column
     display: grid
@@ -32,34 +36,78 @@
         &.#{$state}
           color: palette(tile, #{$state})
       
-.links
+.divider
+  border: 0
+  border-top: 1px solid palette(misc, divider)
+
+.form
+  margin: spacing(4, 8)
+  display: flex
+  justify-content: stretch
+  gap: spacing(2)
+
+  .input
+    flex: 1
+    border-radius: $border-radius
+    padding: spacing(2,3)
+    background: palette(tile, absent)
+
+    &:focus
+      outline: 1px solid palette(tile, correct)
+
+  .submit
+    padding: spacing(1, 2)
+    border-radius: $border-radius
+    border: 1.5px solid palette(tile, border)
+    color: palette(text, primary)
+
+    &:disabled
+      color: palette(tile, border)
+
+    &.submitted
+      animation: correct $flip-duration-halved steps(1) forwards, flip $flip-duration ease-in-out forwards
+
+    &.error
+      animation: present $flip-duration-halved steps(1) forwards, flip $flip-duration ease-in-out forwards
+
+
+.majorLinks
   display: grid
   grid-template-columns: repeat(2, minmax(max-content, 1fr))
   column-gap: spacing(4)
   row-gap: spacing(2)
-  padding: spacing(4)
+  margin: spacing(4, 8)
 
-.link
+  .link
+    display: flex
+    align-items: center
+    justify-content: space-between
+
+    .linkInfo
+      flex: 1
+
+      .name
+        font-weight: map-get($typography, fontWeight, bold)
+        font-size: 0.9rem
+
+      .label
+        font-size: 0.8rem
+        color: palette(text, secondary)
+
+    .linkIcon
+      cursor: pointer
+      transition: color 100ms ease-in-out
+      color: palette(tile, default)
+
+      &:hover
+        color: palette(text, primary)
+
+.minorLinks
   display: flex
+  justify-content: center
   align-items: center
-  justify-content: space-between
-
-  .linkInfo
-    flex: 1
-
-    .name
-      font-weight: map-get($typography, fontWeight, bold)
-      font-size: 0.9rem
-
-    .label
-      font-size: 0.8rem
-      color: palette(text, secondary)
-
-  .linkIcon
-    cursor: pointer
-    transition: color 100ms ease-in-out
-    color: palette(tile, default)
-
-    &:hover
-      color: palette(text, primary)
-
+  text-align: center
+  font-size: 0.85rem
+  color: palette(text, secondary)
+  gap: spacing(2)
+  margin: spacing(4)
