--- a/styles/global.sass
+++ b/styles/global.sass
@@ -24,6 +24,17 @@ button
   border: 0
   outline: 0
 
+a
+  color: inherit
+
+input
+  background-color: inherit
+  color: inherit
+  border: none
+
+  &[type="submit"]
+    border: 1px solid
+
 // Set up CSS Variables
 // Ref: https://codepen.io/jakealbaugh/post/css4-variables-and-sass
 
