Improved form UX and minor links layout

--- a/styles/dialog/InfoDialog.module.sass
+++ b/styles/dialog/InfoDialog.module.sass
@@ -51,6 +51,7 @@
     border-radius: $border-radius
     padding: spacing(2,3)
     background: palette(tile, absent)
+    font-size: 0.9rem
 
     &:focus
       outline: 1px solid palette(tile, correct)
@@ -60,6 +61,7 @@
     border-radius: $border-radius
     border: 1.5px solid palette(tile, border)
     color: palette(text, primary)
+    font-size: 0.9rem
 
     &:disabled
       color: palette(tile, border)
@@ -109,5 +111,4 @@
   text-align: center
   font-size: 0.85rem
   color: palette(text, secondary)
-  gap: spacing(2)
   margin: spacing(4)
